--- a/a3_group98/MusicEventCentral/templates/events/booking_history.html
+++ b/a3_group98/MusicEventCentral/templates/events/booking_history.html
@@ -4,93 +4,46 @@
 
 <body>
     <!-- Booking History -->
-    <div class="container ">
+    <div class="container">
         <h1 class="mt-3 mb-3">Booking History</h1>
+        
+        {% for booking, event in user_bookings %}
         <div class="card mt-3 mb-3 border">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="card-img-top" style="height: 300px" src="static/img/event1.jpeg" alt="Event 1 Image">
+                    <img class="card-img-top" style="height: 300px" src="{{ event.image }}" alt="Event Image">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h2 class="card-title">{{ event.name}}</h2>
+                        <h2 class="card-title">{{ event.name }}</h2>
                         <h6 class="fw-light">When</h6>
                         <div class="row">
                             <div class="col-md-3">
                                 <h6>Start</h6>
-                                <p>{{ event.start_time }}:{{ event.start_time.minute }} {{ event.start_date }}</p>
+                                <p>{{ event.start_date }} {{ event.start_time }}</p>
                             </div>
                             <div class="col-md-3">
                                 <h6>End</h6>
                                 <p>{{ event.end_date }} {{ event.end_time }}</p>
                             </div>
                         </div>
-                        <h6 class="fw-light">{{ event.location}}</h6>
+                        <h6 class="fw-light">{{ event.location }}</h6>
                         <hr>
                         <div class="row justify-content-center text-center">
                             <div class="col-md-5 border">
-                                <h4 class="card-text">Order Placed </h4>
-                                <p class="card-text text-muted"><strong>10:42am 17/08/2023</strong></p>
+                                <h4 class="card-text">Order Placed</h4>
+                                <p class="card-text text-muted"><strong>{{ booking.date.strftime('%I:%M%p %d/%m/%Y') }}</strong></p>
                             </div>
                             <div class="col-md-5 border">
-                                <h4 class="card-text">Order Number </h4>
-                                <p class="card-text text-muted"><strong>1234</strong></p>
+                                <h4 class="card-text">Order Number</h4>
+                                <p class="card-text text-muted"><strong>{{ booking.id }}</strong></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="card mt-3 mb-3 border">
-            <div class="row">
-                <div class="col-md-4">
-                    <img class="card-img-top" style="height: 300px" src="static/img/event2.jpeg" alt="Event 2 Image">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h2 class="card-title">Music Event 2</h2>
-                        <h6 class="fw-light">Saturday, August 19 | 1 - 2pm</h6>
-                        <h6 class="fw-light">WestsideHQ 3 Clewley Street Corinda, QLD 4075</h6>
-                        <hr>
-                        <div class="row justify-content-center text-center">
-                            <div class="col-md-5 border">
-                                <h4 class="card-text">Order Placed </h4>
-                                <p class="card-text text-muted"><strong>12:30pm 17/08/2023</strong></p>
-                            </div>
-                            <div class="col-md-5 border">
-                                <h4 class="card-text">Order Number </h4>
-                                <p class="card-text text-muted"><strong>4395</strong></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card mt-3 mb-3 border">
-            <div class="row">
-                <div class="col-md-4">
-                    <img class="card-img-top" style="height: 300px" src="static/img/event3.jpeg" alt="Event 3 Image">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h2 class="card-title">Music Event 3</h2>
-                        <h6 class="fw-light">Sunday, August 20 | 1 - 2pm</h6>
-                        <h6 class="fw-light">WestsideHQ 3 Clewley Street Corinda, QLD 4075</h6>
-                        <hr>
-                        <div class="row justify-content-center text-center">
-                            <div class="col-md-5 border">
-                                <h4 class="card-text">Order Placed </h4>
-                                <p class="card-text text-muted"><strong>1:13pm 17/08/2023</strong></p>
-                            </div>
-                            <div class="col-md-5 border">
-                                <h4 class="card-text">Order Number </h4>
-                                <p class="card-text text-muted"><strong>3848</strong></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% endfor %}
     </div>
 
 </body>
